/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java'
    id 'jacoco'
}

repositories {
    maven {
        url "http://maven.aliyun.com/nexus/content/groups/public"
    }
}

jacocoTestReport {
    reports {
        csv.enabled true
    }
}


dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web:2.3.1.RELEASE'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.3.1.RELEASE'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
    testCompile "org.mockito:mockito-core:3.4.0"
}

group = 'com.thoughtworks'
version = '0.0.1-SNAPSHOT'
description = 'spring-boot-employee'
sourceCompatibility = '1.8'

test {
    useJUnitPlatform()
}